<resources>
    <string name="app_name">RoamNote app</string>
    <string name="menu_txt_forum">Forum</string>
    <string name="menu_txt_map">Map</string>
    <string name="menu_txt_daily_log">Daily Log</string>
    <string name="menu_txt_trips">Trips</string>
    <string name="roamnote">RoamNote</string>
    <string name="logo">Logo</string>
    <string name="login_txt_email">Email</string>
    <string name="login_txt_password">Password</string>
    <string name="login_txt_log_in">Log In</string>
    <string name="login_txt_register">Create Account</string>
    <string name="trip_title">Trip title</string>
    <string name="trip_item_dates">July 25 - August 27, 2025</string>
    <string name="trips_txt_trips">Trips</string>
    <string name="trips_add_trip">Add a trip</string>
    <string name="daily_log_title">Daily Log</string>
    <string name="log_trip">Trip</string>
    <string name="log_date">Date: </string>
    <string name="log_expenses">Expenses</string>
    <string name="log_add_expense">Add expense</string>
    <string name="log_add_activity">add activity</string>
    <string name="log_activities">Activities</string>
    <string name="log_hotel">Hotel: </string>
    <string name="log_save">Save</string>
    <string name="log_add_photo">Add photo</string>
    <string name="log_add_location">Add location</string>
    <string name="log_back_button">log_back_arrow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="signup_txt_Register">Register</string>
    <string name="create_new_acount">Create New Account</string>
    <string name="signup_txt_full_name">Full Name</string>
    <string name="signup_txt_have_account">Already have an Account? Login Here</string>
    <string name="login_txt_login_your_account">Login to your Account</string>
    <string name="main_back_button">main_back_button</string>
    <string name="title_Forum">Forum</string>
    <string name="title_trips">Trips</string>
    <string name="title_day_log">Daily Log</string>
    <string name="title_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_select_trip">Select Trip</string>
    <string name="log_add">ADD</string>
    <string name="Forum_title">Forum</string>
    <string name="forum_new_post">New Post</string>
    <string name="item_forum_time">2 hours ago</string>
    <string name="item_forum_title">Post Title</string>
    <string name="item_forum_author">Author</string>
    <string name="item_forum_description">Post content here...</string>
    <string name="add_trip_title">Add New Trip</string>
    <string name="add_trip_trip_name">Trip Name</string>
    <string name="trips_save">Save</string>
    <string name="log_date_date">01/01/2000</string>
    <string name="log_hotel_name">Hotel name</string>
    <string name="add_hotel_title">Add New Hotel</string>
    <string name="add_hotel_hotel_name">Hotel name*</string>
    <string name="add_hotel_cost">Cost in USD</string>
    <string name="add_hotel_description">description (optional)</string>
    <string name="add_expense_title">Add New Expense</string>
    <string name="add_expense_name">Expense for</string>
    <string name="add_activity_title">Add New Activity</string>
    <string name="add_activity_name">Activity title</string>
    <string name="add_activity_cost">Cost in USD</string>
    <string name="add_activity_note">Note(optional)</string>
    <string name="log_out">Log out</string>
    <string name="trip_overview_dates">From ... to ...</string>
    <string name="trip_overview_cost">1200$</string>
    <string name="map_search_bar">Look by name</string>
    <string name="login_txt_username">Username</string>
    <string name="add_post_title">New Post</string>
    <string name="add_post_add_title">Title</string>
    <string name="add_post_content">Content</string>
</resources>