<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_trips">

    <fragment
        android:id="@+id/navigation_trips"
        android:name="dev.romle.roamnoteapp.ui.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips" >

        <action
            android:id="@+id/action_tripsFragment_to_tripOverviewFragment"
            app:destination="@id/navigation_trip_overview" />

    </fragment>

    <fragment
        android:id="@+id/navigation_day_log"
        android:name="dev.romle.roamnoteapp.ui.DailyLogFragment"
        android:label="@string/title_day_log"
        tools:layout="@layout/fragment_daily_log" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="dev.romle.roamnoteapp.ui.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_Forum"
        android:name="dev.romle.roamnoteapp.ui.ForumFragment"
        android:label="@string/title_Forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_trip_overview"
        android:name="dev.romle.roamnoteapp.ui.TripOverviewFragment"
        android:label="Trip Overview"
        tools:layout="@layout/fragment_trip_overview">

        <argument
            android:name="tripId"
            app:argType="string" />

    </fragment>



</navigation>