<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_text_box"
    android:padding="16dp"
    android:layout_marginBottom="12dp">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/post_LBL_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_forum_time"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:layout_marginBottom="@dimen/item_forum_margin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/post_LBL_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_forum_title"
            android:textStyle="bold"
            android:textSize="@dimen/item_forum_title_size" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/post_LBL_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_forum_author"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/item_forum_author_size" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/post_LBL_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_forum_description"
            android:layout_marginTop="@dimen/item_forum_margin"
            android:textSize="@dimen/item_forum_des_size" />

</LinearLayout>