<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dialogfragments.AddExpenseFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_expense_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense_title"
        android:textStyle="bold"
        android:textSize="@dimen/trips_title_size"
        android:textColor="@color/Bagy_blue"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/login_title_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/add_expense_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edit_text_box"
        android:padding="@dimen/log_padding"
        android:layout_marginHorizontal="@dimen/logo_margin"
        android:layout_weight="10"
        android:layout_gravity="center_vertical"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_expense_TXT_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_expense_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/log_button_size"
            />


    </LinearLayout>

        <LinearLayout
        android:id="@+id/add_expense_selector2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edit_text_box"
        android:padding="@dimen/log_padding"
        android:layout_marginHorizontal="@dimen/logo_margin"
        android:layout_weight="10"
        android:layout_gravity="center_vertical"
        >
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_expense_TXT_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_hotel_cost"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/log_button_size"
        android:layout_gravity="center_vertical"
        />
    </LinearLayout>

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/add_expense_tagChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:singleSelection="false"
        app:selectionRequired="false"
        app:chipSpacing="8dp"
        app:chipSpacingHorizontal="8dp"
        app:chipSpacingVertical="4dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_expense_BTN_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_margin"
        android:layout_margin="@dimen/logo_margin"
        android:backgroundTint="@color/Bagy_orange"
        android:textColor="@color/white"
        android:text="@string/trips_save"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/trips_add_trips_top_margin"
        />


</LinearLayout>